// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly with error prop 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgb(255, 98, 66)",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "left": 0,
      "paddingTop": 20,
      "position": "absolute",
      "right": 0,
      "top": -90,
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgb(255, 255, 255)",
        "fontFamily": "Poppins",
        "fontSize": 14,
        "fontWeight": "bold",
        "marginBottom": 20,
        "marginLeft": 20,
        "marginTop": 20,
        "textAlign": "left",
        "width": "75%",
      }
    }
  >
    Testing
  </Text>
  <View
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": 40,
          "opacity": 1,
          "padding": 12,
          "width": 40,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/app/components/alert/images/close.png",
          }
        }
        style={
          Object {
            "height": 16,
            "width": 16,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Alert renders correctly without error prop 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgb(255, 98, 66)",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "left": 0,
      "paddingTop": 20,
      "position": "absolute",
      "right": 0,
      "top": -90,
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgb(255, 255, 255)",
        "fontFamily": "Poppins",
        "fontSize": 14,
        "fontWeight": "bold",
        "marginBottom": 20,
        "marginLeft": 20,
        "marginTop": 20,
        "textAlign": "left",
        "width": "75%",
      }
    }
  >
    Operation failed
  </Text>
  <View
    style={
      Object {
        "marginRight": 10,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": 40,
          "opacity": 1,
          "padding": 12,
          "width": 40,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/app/components/alert/images/close.png",
          }
        }
        style={
          Object {
            "height": 16,
            "width": 16,
          }
        }
      />
    </View>
  </View>
</View>
`;
